fix: complete qqbot media task handling